--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo": "~46.0.16",
     "expo-cli": "^6.0.8",
     "expo-status-bar": "~1.4.0",
-    "firebase": "^9.13.0",
+    "firebase": "^9.14.0",
+    "metro-config": "^0.73.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
