--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "expo": "~46.0.16",
+    "expo": "^46.0.17",
     "expo-cli": "^6.0.8",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
