--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0"
   },
